--- a/.github/workflows/publish_docker_velero-plugin-for-terminus.yaml
+++ b/.github/workflows/publish_docker_velero-plugin-for-terminus.yaml
@@ -13,6 +13,12 @@ jobs:
     - name: Check out the repo
       uses: actions/checkout@v3
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
@@ -25,3 +31,4 @@ jobs:
         push: true
         tags: beclab/velero-plugin-for-terminus:${{ github.event.inputs.tags }}
         file: Dockerfile
+        platforms: linux/amd64,linux/arm64
